# bpf_conformance

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  renovate.json
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: build-libbpf.sh
.github/workflows/: Build.yml  CICD.yml  codeball.yml  codeql-analysis.yml  dependency-review.yml  scorecards.yml
Docker/Linux/: Dockerfile
Docker/Windows/: Dockerfile
_codeql_build_dir/: DartConfiguration.tcl  Dockerfile
_codeql_build_dir/tests/: add64.data  alu-bit.data  alu64-arith.data  arsh32-reg.data  be16-high.data  be32-high.data  be32.data  be64.data  bswap32.data  call_local.data  div32-high-divisor.data  div32-reg.data  div64-by-zero-reg.data  div64-imm.data  exit-not-last.data  ja32.data  jeq32-imm.data  jeq32-reg.data  jge-imm.data  jge32-reg.data  jgt-reg.data  jgt32-imm.data  jit-bounce.data  jle-imm.data  jle32-reg.data  jlt-imm.data  jlt-reg.data  jlt32-imm.data  jlt32-reg.data  jne32-reg.data  jset-imm.data  jsge-imm.data  jsge32-imm.data  jsge32-reg.data  jsle-imm.data  jsle32-reg.data  jslt-imm.data  jslt-reg.data  jslt32-imm.data  jslt32-reg.data  (+53 more)
_codeql_build_dir/tests/rfc9669/: sec_4_1_div32.data  sec_4_1_div64.data  sec_4_1_neg32.data  sec_4_1_or64.data  sec_4_1_sub32.data  sec_4_2_swap16.data  sec_5_1_stxdw.data
cmake/: FetchElfio.cmake  FindLibBpf.cmake  options.cmake  platform.cmake  settings.cmake
docs/: Governance.md
include/: bpf_conformance.h
lib/: CMakeLists.txt
lib/include/bpf_conformance_core/: bpf_assembler.h  bpf_conformance.h  bpf_test_parser.h  bpf_writer.h  ebpf.h  ebpf_inst.h  opcode_names.h
lib/src/: bpf_assembler.cc  bpf_conformance.cc  bpf_disassembler.cc  bpf_test_parser.cc  bpf_writer.cc  bpf_writer.h
libbpf_plugin/: CMakeLists.txt  libbpf_plugin.cc
negative/: empty.data  empty_instructions.data  error.data  incorrect_return_value_high_bits.data  invalid.sh  invalid_call_mode.data  invalid_helper.data  invalid_imm32_dec_range.data  invalid_imm32_hex_range.data  invalid_label.data  invalid_lddw_operand.data  invalid_lock.data  invalid_lock2.data  invalid_mnemonic.data  invalid_offset.data  invalid_offset_range.data  invalid_operand_count.data  invalid_register.data  invalid_unknown_directive.data  missing_map.data  unused-add64_imm-offset.data  unused-add64_imm-src.data  unused-add64_reg-imm.data  unused-add64_reg-offset.data  unused-add_imm-offset.data  unused-add_imm-src.data  unused-add_reg-imm.data  unused-add_reg-offset.data  unused-be16-offset.data  unused-be16-src.data  unused-call-dst.data  unused-call-offset.data  unused-exit-dst.data  unused-exit-imm.data  unused-exit-offset.data  unused-exit-src.data  unused-ja-dst.data  unused-ja-imm.data  unused-ja-src.data  unused-jeq_imm-src.data  (+25 more)
scripts/: CMakeLists.txt  check-license.sh  generate_unused_field_tests.py  roundtrip_test.ps1  roundtrip_test.sh
src/: CMakeLists.txt  bpf_asm.cc  bpf_assembler.cc  bpf_assembler.h  bpf_assembler_disassembler_test.cc  bpf_conformance.cc  bpf_conformance.h  bpf_disasm.cc  bpf_disassembler.cc  bpf_disassembler.h  bpf_test_parser.cc  bpf_test_parser.h  bpf_writer.cc  bpf_writer.h  ebpf.h  ebpf_inst.h  linux_helpers.h  opcode_names.h  runner.cc  windows_helpers.h
tests/: add.data  add64.data  alu-arith.data  alu-bit.data  alu64-arith.data  alu64-bit.data  arsh-reg.data  arsh.data  arsh32-high-shift.data  arsh32-imm-high.data  arsh32-imm-neg.data  arsh32-imm.data  arsh32-reg-high.data  arsh32-reg-neg.data  arsh64-imm-high.data  arsh64-imm-neg.data  arsh64-imm.data  arsh64-reg-high.data  arsh64-reg-neg.data  arsh64-reg.data  arsh64.data  be16-high.data  be16.data  be32-high.data  be32.data  be64.data  bswap16.data  bswap64.data  call_local.data  call_runtime.data  call_unwind_fail.data  callx.data  div-by-zero-reg.data  div32-by-zero-reg-2.data  div32-by-zero-reg.data  div32-high-divisor.data  div32-imm.data  div32-reg.data  div64-by-zero-reg.data  div64-imm.data  (+234 more)
tests/rfc9669/: README.md  sec_4_1_add32.data  sec_4_1_and32.data  sec_4_1_arsh32.data  sec_4_1_arsh64.data  sec_4_1_div32.data  sec_4_1_lsh32.data  sec_4_1_lsh64.data  sec_4_1_mod32.data  sec_4_1_mod64.data  sec_4_1_mov32.data  sec_4_1_movsx.data  sec_4_1_mul32.data  sec_4_1_neg32.data  sec_4_1_neg64.data  sec_4_1_or32.data  sec_4_1_rsh32.data  sec_4_1_rsh64.data  sec_4_1_sdiv32.data  sec_4_1_sdiv64.data  sec_4_1_smod32.data  sec_4_1_smod64.data  sec_4_1_sub32.data  sec_4_1_sub64.data  sec_4_1_xor32.data  sec_4_2_be64.data  sec_4_2_le16.data  sec_4_2_swap64.data  sec_4_3_exit.data  sec_4_3_ja.data  sec_4_3_ja32.data  sec_4_3_jge.data  sec_4_3_jgt.data  sec_4_3_jset.data  sec_4_3_jslt.data  sec_5_1_ldxdw.data  sec_5_1_ldxh.data  sec_5_1_sth.data  sec_5_1_stxh.data  sec_5_2_ldxsb.data  (+8 more)
tools/: CMakeLists.txt  boost_helper.h  bpf_asm.cc  bpf_conformance.cc  bpf_conformance.h  bpf_conformance_process.cc  bpf_disasm.cc  bpf_writer.h  opcode_names.h  runner.cc  tests.cmake
